apps/tanlv/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: tanlv-web
spec:
  replicas: 3
  selector:
    matchLabels:
      app: tanlv-web
  template:
    metadata:
      labels:
        app: tanlv-web
    spec:
      containers:
      - name: nginx
        image: nginx:stable
        ports:
        - containerPort: 80
        volumeMounts:
        - name: web-content
          mountPath: /usr/share/nginx/html
      volumes:
      - name: web-content
        persistentVolumeClaim:
          claimName: pvc-nfs-tanlv-web
