apps/tanlv/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: tanlv-web-svc
spec:
  type: ClusterIP
  selector:
    app: tanlv-web
  ports:
  - port: 80
    protocol: TCP
    targetPort: 80
